fixed weird gap in photography page

--- a/photography.css
+++ b/photography.css
@@ -84,7 +84,7 @@ a:hover {
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 0px 4px;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -96,7 +96,7 @@ a:hover {
 }
 
 .column img {
-  margin-top: 40px;
+  margin-top: 10px;
   vertical-align: middle;
 }
 
